feat: add room crud
